todoアプリの実装

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
         <button v-on:click="addItem">Add</button>
       </form>
 
-      <pre>{{ todos }}</pre>
+      <ul>
+        <li v-for="(todo, index) in todos">
+          <input type="checkbox" v-model="todo.isDone" />
+          <span v-bind:class="{ done:todo.isDone }">{{ todo.item }}</span>
+          <button v-on:click="deleteItem(index)">Delete</button>
+        </li>
+      </ul>
     </div>
 
     <script src="https://unpkg.com/vue@3.1.5"></script>
